--- a/incubator/java-microprofile/templates/default/pom.xml
+++ b/incubator/java-microprofile/templates/default/pom.xml
@@ -92,8 +92,14 @@
             <plugin>
                 <groupId>net.wasdev.wlp.maven.plugins</groupId>
                 <artifactId>liberty-maven-plugin</artifactId>
-                <configuration>
-                    <assemblyArtifact>
+                
+<version>3.0.M1</version>
+                
+<configuration>
+                    
+<verifyTimeout>120</verifyTimeout>
+                    
+<assemblyArtifact>
                         <groupId>${liberty.groupId}</groupId>
                         <artifactId>${liberty.artifactId}</artifactId>
                         <version>${version.openliberty-runtime}</version>
@@ -102,7 +108,10 @@
                     <serverName>defaultServer</serverName>
                     <stripVersion>true</stripVersion>
                     <configFile>src/main/liberty/config/server.xml</configFile>
-                    <looseApplication>true</looseApplication>
+                    
+<appsDirectory>apps</appsDirectory>
+                    
+<looseApplication>true</looseApplication>
                     <packageFile>${package.file}</packageFile>
                     <include>${packaging.type}</include>
                     <bootstrapProperties>
