java-microprofile: LMP 3.1 Liberty 19./0.0.9, use dev mode, define target dir

--- a/incubator/java-microprofile/templates/default/pom.xml
+++ b/incubator/java-microprofile/templates/default/pom.xml
@@ -104,6 +104,7 @@
                     <configFile>src/main/liberty/config/server.xml</configFile>
                     <packageFile>${package.file}</packageFile>
                     <include>${packaging.type}</include>
+                    <serverStartTimeout>120</serverStartTimeout>
                     <bootstrapProperties>
                         <default.http.port>${http.port}</default.http.port>
                         <default.https.port>${https.port}</default.https.port>
