java-openliberty: Create Openliberty stack

--- a/incubator/java-openliberty/image/project/Dockerfile
+++ b/incubator/java-openliberty/image/project/Dockerfile
@@ -4,7 +4,7 @@ FROM adoptopenjdk/openjdk8-openj9
 RUN apt-get update && \
     apt-get install -y maven unzip wget xmlstarlet
 
-# Copy and build the dev.appsody:java-microprofile parent pom
+# Copy and build the dev.appsody:java-openliberty parent pom
 COPY ./pom.xml /project/pom.xml
 RUN cd /project && mvn -B install dependency:go-offline -DskipTests
 
@@ -14,10 +14,11 @@ RUN  /project/util/check_version build
 
 # Copy the user's application pom and resolve all dependencies
 COPY ./user-app/pom.xml /project/user-app/pom.xml
-RUN cd /project/user-app && mvn package -Dskip=true -DskipTests 
+COPY ./validate.sh /project/user-app/validate.sh
+RUN cd /project/user-app && ./validate.sh  && mvn package -Dskip=true -DskipTests 
 
 # Download Open Liberty here to prevent redownloading each time the app is changed
-RUN cd /project/user-app && mvn -B liberty:install-server
+RUN cd /project/user-app && mvn liberty:install-server
 
 # Copy and build the application source
 COPY ./user-app/src /project/user-app/src
