--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_script:
   - ./ci/download_cli.sh
 
 script:
-  - . ./ci/build.sh
+  - travis_wait 30 ./ci/build.sh
 
 # note before_deploy will run before each deploy provider
 before_deploy:
