Switch to MicroProfile v3.2; switch from using OL feature to using standard aggregate API dependency
Signed-off-by: Scott Kurz <skurz@us.ibm.com>

--- a/incubator/java-openliberty/templates/default/pom.xml
+++ b/incubator/java-openliberty/templates/default/pom.xml
@@ -20,9 +20,9 @@
     <dependencies>
         <!-- Open Liberty Features -->
         <dependency>
-            <groupId>io.openliberty.features</groupId>
-            <artifactId>microProfile-3.0</artifactId>
-            <type>esa</type>
+            <groupId>org.eclipse.microprofile</groupId>
+            <artifactId>microprofile</artifactId>
+            <version>3.2</version>
         </dependency>
         <!-- For tests -->
         <dependency>
@@ -54,25 +54,25 @@
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
             <version>2.3.1</version>
-	    <scope>test</scope>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-core</artifactId>
             <version>2.3.0.1</version>
-	    <scope>test</scope>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-impl</artifactId>
             <version>2.3.2</version>
-	    <scope>test</scope>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>javax.activation</groupId>
             <artifactId>activation</artifactId>
             <version>1.1.1</version>
-	    <scope>test</scope>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
