--- a/incubator/java-openliberty/image/project/Dockerfile
+++ b/incubator/java-openliberty/image/project/Dockerfile
@@ -13,12 +13,11 @@ COPY ./util /project/util
 RUN  /project/util/check_version build
 
 # Copy the user's application pom and resolve all dependencies, also trigger Open Liberty install
-COPY ./user-app/pom.xml /project/user-app/pom.xml
+COPY ./user-app /project/user-app
 COPY ./validate.sh /project/user-app/validate.sh
 RUN cd /project/user-app && ./validate.sh  && mvn -Pbuild liberty:create
 
-# Copy and build the application source, and run unit tests
-COPY ./user-app/src /project/user-app/src
+# Build the application source, and run unit tests
 RUN cd /project/user-app && mvn -Pbuild package
 
 RUN cd /project/user-app/target/liberty/wlp/usr/servers && \
