--- a/incubator/java-openliberty/image/Dockerfile-stack
+++ b/incubator/java-openliberty/image/Dockerfile-stack
@@ -16,10 +16,13 @@ RUN  /project/util/check_version build
 WORKDIR /project/
 RUN mkdir -p /mvn/repository
 RUN mvn -B -Dmaven.repo.local=/mvn/repository -N io.takari:maven:wrapper -Dmaven=$(mvn help:evaluate -Dexpression=maven.version -q -DforceStdout)
-RUN mvn -B -Dmaven.repo.local=/mvn/repository install dependency:go-offline -DskipTests
-RUN mvn -Dmaven.repo.local=/mvn/repository install dependency:go-offline -DskipTests -f pom-dev.xml
+RUN mvn -B -Pdev -Dmaven.repo.local=/mvn/repository liberty:install-server install dependency:go-offline
+
+## NO NEED?
+ ## RUN mvn -Dmaven.repo.local=/mvn/repository install dependency:go-offline -DskipTests -f pom-dev.xml
 
 WORKDIR /project/user-app
+RUN /project/install-dev-deps.sh
 
 ENV APPSODY_MOUNTS="~/.m2/repository:/mvn/repository;.:/project/user-app"
 ENV APPSODY_DEPS=
@@ -32,21 +35,25 @@ ENV APPSODY_WATCH_REGEX="^.*(.xml)$"
 
 ENV APPSODY_USER_RUN_AS_LOCAL=true
 
-ENV APPSODY_PREP="export APPSODY_DEV_MODE=prep;  ../validate.sh && mvn -B -Dmaven.repo.local=/mvn/repository install -DskipTests && /project/install-dev-deps.sh"
+# Set APPSODY_DEV_MODE to get in the habit in case we need it someday
+ENV APPSODY_PREP="export APPSODY_DEV_MODE=prep;  ../validate.sh"
+#ENV APPSODY_PREP="export APPSODY_DEV_MODE=prep;  ../validate.sh && mvn -B -Dmaven.repo.local=/mvn/repository install -DskipTests && /project/install-dev-deps.sh"
 
-ENV APPSODY_RUN="export APPSODY_DEV_MODE=run; JVM_ARGS='-javaagent:resources/javametrics-agent.jar' ../validate.sh && mvn -B -Dmaven.repo.local=/mvn/repository liberty:dev"
+ENV APPSODY_RUN="export APPSODY_DEV_MODE=run JVM_ARGS='-javaagent:resources/javametrics-agent.jar'; mvn -B -Dmaven.repo.local=/mvn/repository liberty:dev"
 # See ENV APPSODY_WATCH_REGEX comment
-ENV APPSODY_RUN_ON_CHANGE="JVM_ARGS='-javaagent:resources/javametrics-agent.jar' ../validate.sh && mvn -Dmaven.repo.local=/mvn/repository liberty:dev"
+ENV APPSODY_RUN_ON_CHANGE="export APPSODY_DEV_MODE=run JVM_ARGS='-javaagent:resources/javametrics-agent.jar'; ../validate.sh && mvn -Dmaven.repo.local=/mvn/repository liberty:dev"
 ENV APPSODY_RUN_KILL=true
 
-ENV APPSODY_DEBUG="APPSODY_DEV_MODE=debug && JVM_ARGS='-javaagent:resources/javametrics-agent.jar' ../validate.sh && mvn -B -Dmaven.repo.local=/mvn/repository liberty:dev"
+ENV APPSODY_DEBUG="export APPSODY_DEV_MODE=debug JVM_ARGS='-javaagent:resources/javametrics-agent.jar'; mvn -B -Dmaven.repo.local=/mvn/repository liberty:dev"
 # See ENV APPSODY_WATCH_REGEX comment
-ENV APPSODY_DEBUG_ON_CHANGE="JVM_ARGS='-javaagent:resources/javametrics-agent.jar' ../validate.sh && mvn -Dmaven.repo.local=/mvn/repository liberty:dev"
+ENV APPSODY_DEBUG_ON_CHANGE="export APPSODY_DEV_MODE=debug JVM_ARGS='-javaagent:resources/javametrics-agent.jar'; ../validate.sh && mvn -Dmaven.repo.local=/mvn/repository liberty:dev"
 ENV APPSODY_DEBUG_KILL=true
 
-ENV APPSODY_TEST="mvn -B -Dmaven.repo.local=/mvn/repository verify"
-ENV APPSODY_TEST_ON_CHANGE=""
-ENV APPSODY_TEST_KILL=false
+ENV APPSODY_TEST="export APPSODY_DEV_MODE=test JVM_ARGS='-javaagent:resources/javametrics-agent.jar'; mvn -B -Dmaven.repo.local=/mvn/repository liberty:dev"
+# See ENV APPSODY_WATCH_REGEX comment
+ENV APPSODY_TEST_ON_CHANGE="export APPSODY_DEV_MODE=test JVM_ARGS='-javaagent:resources/javametrics-agent.jar'; ../validate.sh && mvn -Dmaven.repo.local=/mvn/repository liberty:dev"
+ENV APPSODY_TEST_KILL=true
+
 
 ENV PORT=9080
 
