For appsody build add unit test and -Pbuild profile
Signed-off-by: Scott Kurz <skurz@us.ibm.com>

--- a/incubator/java-openliberty/image/project/Dockerfile
+++ b/incubator/java-openliberty/image/project/Dockerfile
@@ -6,23 +6,20 @@ RUN apt-get update && \
 
 # Copy and build the dev.appsody:java-openliberty parent pom
 COPY ./pom.xml /project/pom.xml
-RUN cd /project && mvn -B install dependency:go-offline -DskipTests
+RUN cd /project && mvn -Pbuild -B install dependency:go-offline -DskipTests
 
 # Copy and run a simple version check
 COPY ./util /project/util
 RUN  /project/util/check_version build
 
-# Copy the user's application pom and resolve all dependencies
+# Copy the user's application pom and resolve all dependencies, also trigger Open Liberty install
 COPY ./user-app/pom.xml /project/user-app/pom.xml
 COPY ./validate.sh /project/user-app/validate.sh
-RUN cd /project/user-app && ./validate.sh  && mvn package -Dskip=true -DskipTests 
+RUN cd /project/user-app && ./validate.sh  && mvn -Pbuild liberty:create
 
-# Download Open Liberty here to prevent redownloading each time the app is changed
-RUN cd /project/user-app && mvn liberty:install-server
-
-# Copy and build the application source
+# Copy and build the application source, and run unit tests
 COPY ./user-app/src /project/user-app/src
-RUN cd /project/user-app && mvn package -DskipTests
+RUN cd /project/user-app && mvn -Pbuild package
 
 RUN cd /project/user-app/target/liberty/wlp/usr/servers && \
     mkdir /config && \
