--- a/incubator/java-openliberty/image/Dockerfile-stack
+++ b/incubator/java-openliberty/image/Dockerfile-stack
@@ -28,26 +28,26 @@ ENV APPSODY_WATCH_DIR=/project/user-app
 ENV APPSODY_WATCH_IGNORE_DIR=/project/user-app/target
 
 # Work around v3.1 issues with dev mode reacting to pom.xml change but should eventually not require this.
-ENV APPSODY_WATCH_REGEX="^.*(.xml)$"
+ENV APPSODY_WATCH_REGEX="^pom\.xml$"
 
 ENV APPSODY_USER_RUN_AS_LOCAL=true
 
 # Set APPSODY_DEV_MODE to get in the habit in case we need it someday
 ENV APPSODY_PREP="export APPSODY_DEV_MODE=prep;  ../validate.sh"
 
-ENV APPSODY_RUN="export APPSODY_DEV_MODE=run JVM_ARGS='-javaagent:resources/javametrics-agent.jar'; mvn -B -Dmaven.repo.local=/mvn/repository liberty:dev"
+ENV APPSODY_RUN="export APPSODY_DEV_MODE=run ; mvn -B -Dmaven.repo.local=/mvn/repository liberty:dev"
 # See ENV APPSODY_WATCH_REGEX comment
-ENV APPSODY_RUN_ON_CHANGE="export APPSODY_DEV_MODE=run JVM_ARGS='-javaagent:resources/javametrics-agent.jar'; ../validate.sh && mvn -Dmaven.repo.local=/mvn/repository liberty:dev"
+ENV APPSODY_RUN_ON_CHANGE="export APPSODY_DEV_MODE=run; ../validate.sh && mvn -Dmaven.repo.local=/mvn/repository liberty:dev"
 ENV APPSODY_RUN_KILL=true
 
-ENV APPSODY_DEBUG="export APPSODY_DEV_MODE=debug JVM_ARGS='-javaagent:resources/javametrics-agent.jar'; mvn -B -Dmaven.repo.local=/mvn/repository liberty:dev"
+ENV APPSODY_DEBUG="export APPSODY_DEV_MODE=debug ; mvn -B -Dmaven.repo.local=/mvn/repository liberty:dev"
 # See ENV APPSODY_WATCH_REGEX comment
-ENV APPSODY_DEBUG_ON_CHANGE="export APPSODY_DEV_MODE=debug JVM_ARGS='-javaagent:resources/javametrics-agent.jar'; ../validate.sh && mvn -Dmaven.repo.local=/mvn/repository liberty:dev"
+ENV APPSODY_DEBUG_ON_CHANGE="export APPSODY_DEV_MODE=debug ; ../validate.sh && mvn -Dmaven.repo.local=/mvn/repository liberty:dev"
 ENV APPSODY_DEBUG_KILL=true
 
-ENV APPSODY_TEST="export APPSODY_DEV_MODE=test JVM_ARGS='-javaagent:resources/javametrics-agent.jar'; mvn -B -Dmaven.repo.local=/mvn/repository liberty:dev"
+ENV APPSODY_TEST="export APPSODY_DEV_MODE=test ; mvn -B -Dmaven.repo.local=/mvn/repository liberty:dev"
 # See ENV APPSODY_WATCH_REGEX comment
-ENV APPSODY_TEST_ON_CHANGE="export APPSODY_DEV_MODE=test JVM_ARGS='-javaagent:resources/javametrics-agent.jar'; ../validate.sh && mvn -Dmaven.repo.local=/mvn/repository liberty:dev"
+ENV APPSODY_TEST_ON_CHANGE="export APPSODY_DEV_MODE=test ; ../validate.sh && mvn -Dmaven.repo.local=/mvn/repository liberty:dev"
 ENV APPSODY_TEST_KILL=true
 
 
