Produce an appsody test that's suitable for running in a pipeline
Signed-off-by: Scott Kurz <skurz@us.ibm.com>

--- a/incubator/java-openliberty/templates/default/pom.xml
+++ b/incubator/java-openliberty/templates/default/pom.xml
@@ -141,7 +141,7 @@
                 <executions>
                     <execution>
                         <phase>integration-test</phase>
-                        <id>integration-test</id>
+                        <id>it-exec</id>
                         <goals>
                             <goal>integration-test</goal>
                         </goals>
