--- a/incubator/java-openliberty/image/Dockerfile-stack
+++ b/incubator/java-openliberty/image/Dockerfile-stack
@@ -45,11 +45,9 @@ ENV APPSODY_DEBUG="export APPSODY_DEV_MODE=debug ; mvn -B -Dmaven.repo.local=/mv
 ENV APPSODY_DEBUG_ON_CHANGE="export APPSODY_DEV_MODE=debug ; ../validate.sh && mvn -Dmaven.repo.local=/mvn/repository liberty:dev"
 ENV APPSODY_DEBUG_KILL=true
 
-ENV APPSODY_TEST="export APPSODY_DEV_MODE=test ; mvn -B -Dmaven.repo.local=/mvn/repository liberty:dev"
-# See ENV APPSODY_WATCH_REGEX comment
-ENV APPSODY_TEST_ON_CHANGE="export APPSODY_DEV_MODE=test ; ../validate.sh && mvn -Dmaven.repo.local=/mvn/repository liberty:dev"
+ENV APPSODY_TEST="export APPSODY_DEV_MODE=test ; exec mvn -B -Dmaven.repo.local=/mvn/repository clean package liberty:create liberty:install-feature liberty:start liberty:deploy failsafe:integration-test@it-exec liberty:stop failsafe:verify"
+ENV APPSODY_TEST_ON_CHANGE=""
 ENV APPSODY_TEST_KILL=true
-
 
 ENV PORT=9080
 
